--- a/app/views/colours/index.html.erb
+++ b/app/views/colours/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Colours#index</h1>
-<p>Find me in app/views/colours/index.html.erb</p>
+<div class="container">
+  <h1>Colours</h1>
+  <h3>What's your favourite colour?</h3>
+
+  <div class="grid">
+    <div class="red"></div>
+    <div class="pink"></div>
+    <div class="purple"></div>
+    <div class="blue"></div>
+    <div class="turquoise"></div>
+    <div class="teal"></div>
+    <div class="green"></div>
+    <div class="yellow"></div>
+    <div class="orange"></div>
+  </div>
+
+</div>
