--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  background-color: #fffff8;
+  font-family: sans-serif;
+  color: #494c6f;
+}
