--- a/app/views/colours/light.html.erb
+++ b/app/views/colours/light.html.erb
@@ -1,2 +1,24 @@
-<h1>Colours#light</h1>
-<p>Find me in app/views/colours/light.html.erb</p>
+<div class="container">
+
+<%= link_to 'About', colours_about_path %>
+
+  <h1>Colours</h1>
+  <h3>What's your favourite colour?</h3>
+  <div class="grid-tint light">
+    <div class="grid light">
+      <div class="red"></div>
+      <div class="pink"></div>
+      <div class="purple"></div>
+      <div class="blue"></div>
+      <div class="turquoise"></div>
+      <div class="teal"></div>
+      <div class="green"></div>
+      <div class="yellow"></div>
+      <div class="orange"></div>
+    </div>
+  </div>
+
+  <p>These colours are too pale!</p>
+  <%= link_to 'darker', colours_index_path %>
+
+</div>
