--- a/app/assets/stylesheets/colours.scss
+++ b/app/assets/stylesheets/colours.scss
@@ -1,13 +1,34 @@
 // Place all the styles related to the Colours controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.container {
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+}
+
+.grid-tint.light {
+  background: white;
+}
+.grid-tint.dark {
+  background: black;
+}
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 100px 100px 100px;
   grid-template-rows: 100px 100px 100px;
   column-gap: 2px;
   row-gap: 2px;
+  background-color: #fffff8;
+}
+
+.grid.light {
+  opacity: 0.4;
+}
+
+.grid.dark {
+  opacity: 0.7;
 }
 
 .red {
