--- a/app/views/colours/index.html.erb
+++ b/app/views/colours/index.html.erb
@@ -5,7 +5,7 @@
 <%= link_to 'About', colours_about_path %>
 
   <h1>Colours</h1>
-  <h3>What's your favourite colour?</h3>
+  <h3>What's your favourite colour today?</h3>
 
   <div class="grid-tint">
     <div class="grid">
