--- a/app/views/colours/index.html.erb
+++ b/app/views/colours/index.html.erb
@@ -7,17 +7,19 @@
   <h1>Colours</h1>
   <h3>What's your favourite colour today?</h3>
 
+  <span class="choice">Great choice</span>
+
   <div class="grid-tint">
     <div class="grid">
-      <div class="red"></div>
-      <div class="pink"></div>
-      <div class="purple"></div>
-      <div class="blue"></div>
-      <div class="turquoise"></div>
-      <div class="teal"></div>
-      <div class="green"></div>
-      <div class="yellow"></div>
-      <div class="orange"></div>
+      <div class="colour red"></div>
+      <div class="colour pink"></div>
+      <div class="colour purple"></div>
+      <div class="colour blue"></div>
+      <div class="colour turquoise"></div>
+      <div class="colour teal"></div>
+      <div class="colour green"></div>
+      <div class="colour yellow"></div>
+      <div class="colour orange"></div>
     </div>
   </div>
 
@@ -25,4 +27,6 @@
   <p><%= link_to 'lighter', colours_light_path %>
   <%= link_to 'darker', colours_dark_path %></p>
 
+
 </div>
+
