--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Basic Rails app</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<div class="tooltip">
+<button id="button1">click me</button>
+  <div class="tooltiptext">
+    <span>Tooltip text</span>
+  </div>
+</div>
