Show tooltip after click in colour grid

--- a/app/views/colours/index.html.erb
+++ b/app/views/colours/index.html.erb
@@ -1,13 +1,13 @@
+<div class="tooltip">
+    <span class="tooltiptext">Great choice!</span>
+</div>
+
 <div class="container">
-
-
 
 <%= link_to 'About', colours_about_path %>
 
   <h1>Colours</h1>
-  <h3>What's your favourite colour today?</h3>
-
-  <span class="choice">Great choice</span>
+  <h3>What's your favourite colour right now?</h3>
 
   <div class="grid-tint">
     <div class="grid">
@@ -26,7 +26,6 @@
   <p>These colours are too vibrant!</p>
   <p><%= link_to 'lighter', colours_light_path %>
   <%= link_to 'darker', colours_dark_path %></p>
-
 
 </div>
 
