--- a/app/assets/stylesheets/colours.scss
+++ b/app/assets/stylesheets/colours.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   display: flex;
+  // position: absolute;
 }
 
 .grid-tint.light {
@@ -65,4 +66,26 @@
 
 .orange {
   background-color: #ffa500;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  // border-bottom: 1px dotted black;
+}
+
+.tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  border: 1px solid black;
+  background-color: white;
+  color: #000;
+  text-align: center;
+  // border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  // top: -40px;
+  z-index: 1;
 }
