--- a/app/assets/stylesheets/colours.scss
+++ b/app/assets/stylesheets/colours.scss
@@ -71,21 +71,19 @@
 .tooltip {
   position: relative;
   display: inline-block;
-  // border-bottom: 1px dotted black;
 }
 
 .tooltiptext {
   visibility: hidden;
   width: 120px;
-  border: 1px solid black;
-  background-color: white;
-  color: #000;
+  border: 2px solid #494c6f;
+  background-color: #fffff8;
+  color: #494c6f;
   text-align: center;
-  // border-radius: 6px;
-  padding: 5px 0;
+  border-radius: 5px;
+  padding: 10px 0;
 
   /* Position the tooltip */
   position: absolute;
-  // top: -40px;
   z-index: 1;
 }
