Revert "Show message when clicking on a colour"

--- a/app/views/colours/dark.html.erb
+++ b/app/views/colours/dark.html.erb
@@ -1,25 +1,2 @@
-<div class="container">
-
-  <%= link_to 'About', colours_about_path %>
-
-  <h1>Colours</h1>
-  <h3>What's your favourite colour right now?</h3>
-
-  <div class="grid-tint dark">
-    <div class="grid dark">
-      <div class="colour red"></div>
-      <div class="colour pink"></div>
-      <div class="colour purple"></div>
-      <div class="colour blue"></div>
-      <div class="colour turquoise"></div>
-      <div class="colour teal"></div>
-      <div class="colour green"></div>
-      <div class="colour yellow"></div>
-      <div class="colour orange"></div>
-    </div>
-  </div>
-
-  <p>These colours are too dark!</p>
-  <p><%= link_to 'lighter', colours_index_path %></p>
-
-</div>
+<h1>Colours#dark</h1>
+<p>Find me in app/views/colours/dark.html.erb</p>
