--- a/app/views/colours/index.html.erb
+++ b/app/views/colours/index.html.erb
@@ -1,27 +1,2 @@
-<div class="container">
-
-  <%= link_to 'About', colours_about_path %>
-
-  <h1>Colours</h1>
-  <h3>What's your favourite colour right now?</h3>
-
-  <div class="grid-tint">
-    <div class="grid">
-      <div class="colour red"></div>
-      <div class="colour pink"></div>
-      <div class="colour purple"></div>
-      <div class="colour blue"></div>
-      <div class="colour turquoise"></div>
-      <div class="colour teal"></div>
-      <div class="colour green"></div>
-      <div class="colour yellow"></div>
-      <div class="colour orange"></div>
-    </div>
-  </div>
-
-  <p>These colours are too vibrant!</p>
-  <p><%= link_to 'lighter', colours_light_path %>
-  <%= link_to 'darker', colours_dark_path %></p>
-
-</div>
-
+<h1>Colours#index</h1>
+<p>Find me in app/views/colours/index.html.erb</p>
